# vulkan-learning

./: .clang-format  .clangd  .gitignore  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
01_triangle/: CMakeLists.txt  main.cpp  triangle_app.cpp  triangle_app.h
02_simplecube/: CMakeLists.txt  main.cpp  simplecube_app.cpp  simplecube_app.h
assets/shaders/simplecube/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv
assets/shaders/triangle/: triangle.vert  triangle.vert.spv
docs/notes/: learning-log.md  vulkan-mental-model.md
lib/stage1/common/: sample_app.h
lib/stage1/core/: asset_path.cpp  asset_path.h  buffer_resource.cpp  buffer_resource.h  command_buffer.cpp  command_buffer.h  glfw_surface_provider.cpp  glfw_surface_provider.h  gpu_resource_base.h  graphics_pipeline_builder.cpp  graphics_pipeline_builder.h  image_barrier.cpp  image_barrier.h  image_resource.cpp  image_resource.h  resource_uploader.cpp  resource_uploader.h  shader_loader.cpp  shader_loader.h  surface_provider.h  swapchain.cpp  swapchain.h  vulkan_context.cpp  vulkan_context.h
